--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -15,7 +15,10 @@
             </a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
-                <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                <form method="post" action="{% url 'accounts:logout' %}" class="d-inline">
+                    {% csrf_token %}
+                    <button type="submit" class="logout-nav-btn">Logout</button>
+                </form>
             </div>
         </div>
     </nav>
